leptos_macro/tests/view/16_children_fn_once_instead_of_fn.stderr
error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnOnce`
  --> tests/view/16_children_fn_once_instead_of_fn.rs:16:17
   |
13 | /      view! {
14 | |          <div>
15 | |              <Inner concrete=42 fun=|| true>
16 | |/                 "foo"
17 | ||                 { non_copy }
   | ||___________________--------_^ this closure implements `FnOnce`, not `Fn`
   | |                    |
   | |                    closure is `FnOnce` because it moves the variable `non_copy` out of its environment
18 | |              </Inner>
19 | |          </div>
20 | |      }
   | |______- the requirement to implement `Fn` derives from here
   |
   = note: required for `Arc<dyn Fn() -> AnyView + Send + std::marker::Sync>` to implement `ToChildren<{closure@$DIR/tests/view/16_children_fn_once_instead_of_fn.rs:16:17: 17:29}>`
